checkbox (0.16.1) UNRELEASED; urgency=low

  [ Jeff Lane ]
  * scripts/cpu_offlining: Modified script to no longer offline cpu0 to resolve
    a bug on ARM. Modified output so most of it is redirected to stderr for
    fail cases, we don't need that much for success cases. (LP: #1078897) 

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 26 Apr 2013 18:23:03 +0100

checkbox (0.16) raring; urgency=low

  [ Brendan Donegan ]
  * Add hidden 'Submit to HEXR' checkbox on submission screen, so that it can
    be utilised in checkbox-certification.
  * checkbox/user_interface.py - fixed keyword argument in show_entry.
    checkbox_cli/cli_interface.py - return tuple as expected. (LP: #1173103)

  [ Po-Hsu Lin]
  * jobs/led.txt.in: Modified the description of led/power-blink-suspend test to
    cover more cases.
    jobs/suspend.txt.in: Modified the description of suspend/suspend_advanced
    test cover more cases. (LP: #1172108)

  [ Jeff Lane ]
  * scripts/sleep_test_log_check: added new script to parse fwts logs for
    errors
    jobs/hibernate.txt.in, jobs/stress.txt.in, jobs/suspend.txt.in: added jobs
    to use the sleep_test_log_check script after s3/s4 tests. Modified current
    s3/s4 tests to use the new None fail level for fwts_test
    scripts/fwts_test: no longer fails on fwts errors if "-f none" is chosen.
    Now it should only fail by manual indication if the actual sleep action
    fails. (LP: #1169922)
  * scripts/bluetooth_test: test no longer generates odd Broken Pipe error when
    the dpkg bit verifies obexftp is installed (LP: #1169488)
  * jobs/networking.txt.in: fixed networking/info jobs that were not being run
    because $output was being resolved too early (LP: #1065983)

  [ Daniel Manrique ]
  * scripts/alsa_record_playback: Replaced alsasrc with autoaudiosrc
    (LP: #1059544)

  [ Jeff Marcom ]
  * scripts/network: added new script for testing and retrieving information for
    network interfaces.